<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".a_explore.MainActivity">

    <!--    툴바-->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/app_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary"
            android:gravity="center|end"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="?attr/colorPrimary"
                android:gravity="center|end">

                <TextView
                    android:id="@+id/search_bar"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/login_edittext"
                    android:clickable="true"
                    android:drawableLeft="@drawable/appbar_search_icon"
                    android:ems="10"
                    android:focusable="true"
                    android:gravity="center"
                    android:hint="@string/search_hint"
                    android:textSize="16sp"
                    app:drawableStartCompat="@drawable/appbar_search_icon" />
                <!--clickable과 focusable이란 속성은 search bar를 button처럼 쓰기 위함.-->

            </LinearLayout>


        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>


    <!--    탭바-->
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_toolbar">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_home" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_popular" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_recent" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_recommend" />

        </com.google.android.material.tabs.TabLayout>

        <!--    구분선-->
        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#d3d3d3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tab_bar" />

    </androidx.viewpager.widget.ViewPager>





    <!--    내용 메인-->


</androidx.constraintlayout.widget.ConstraintLayout>

